@@ -3,6 +3,7 @@
 - Framing Transposer: ignore LookAt target.  Use Follow exclusively (regression fix)
 - Bugfix (fogbugz 1158509): Split brain.UpdateMethod into VcamUpdateMethod and BrainUpdateMethod, to make blending work correctly
 - Bugfix (fogbugz 1162074): Framing transposer and group transposer only reached half maximum ortho size
+- Bugfix (fogbugz 1165599): Transposer: fix gimbal lock issue in LockToTargetWithWorldUp
 - Bugfix: VolumeSettings: handle layermask in HDAdditionalCameraData
 - Bugfix: use vcam's up when drawing gizmos (orbital transposer and free look)
 
